Commit made by the Bioconductor Git-SVN bridge.
Commit id: 5ff231452afceffdae25839fbea19adf68c9d8ba

    before mass-name-changes


Commit id: 1898020b8c18d90ec0d82d52e40d4fadfff6411e

    summary function of consistency for a region


Commit id: 23cbf637f8944bdec4ea3bf720bfbfc04804e3c9

    additions to vignette


Commit id: 59b6e2ef17b787df675d74784c55db90f0648aa7

    added topalleleexample


Commit id: fa833abe828a261697a47e6a7f638288f69260d1

    grid additions in the vignette



git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/AllelicImbalance@100892 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,7 @@ export(mapBiasRef)
 export(phase)
 export(phaseArray2Matrix)
 export(phaseMatrix2Array)
+export(plotTracks)
 export(randomRef)
 export(readGT)
 export(readVcf)
@@ -63,11 +64,13 @@ export(realCigarPositions)
 export(realCigarPositionsList)
 export(refbiasByAnnotation)
 export(referenceFrequency)
+export(regionSummary)
 export(scanForHeterozygotes)
 export(thresholdCountSample)
 export(thresholdDeltaFrequency)
 export(thresholdFrequency)
 export(thresholdPvalue)
+export(topalleleexample)
 exportClasses(ASEset)
 exportClasses(DetectedAI)
 exportClasses(GlobalAnalysis)
@@ -110,6 +113,7 @@ exportMethods(refAllele)
 exportMethods(refFraction)
 exportMethods(refbiasByAnnotation)
 exportMethods(referenceFrequency)
+exportMethods(regionSummary)
 exportMethods(show)
 exportMethods(thresholdCountSample)
 exportMethods(thresholdDeltaFrequency)
@@ -209,6 +213,7 @@ importFrom(graphics,plot)
 importFrom(lattice,barchart)
 importFrom(lattice,panel.abline)
 importFrom(lattice,panel.barchart)
+importFrom(lattice,panel.text)
 importFrom(lattice,trellis.par.set)
 importFrom(lattice,xyplot)
 importFrom(methods,show)
