Commit made by the Bioconductor Git-SVN bridge.
Commit id: 2388eb794115d7ecb2f74e9fe8788b79b9b696cb

    updates and R CMD check approves


Commit id: dbfd060681e1057c175374de9d78d391495875c1

    namechange2


Commit id: f81f71854133e5e4e9f539570275b112ccc60a44

    nameChange1



git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/AllelicImbalance@100921 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,11 @@
 export("alleleCounts<-")
 export("genotype<-")
 export("phase<-")
+export(ASEDAnnotationTrack)
 export(ASEsetFromArrays)
 export(ASEsetFromBam)
 export(ASEsetFromCountList)
+export(CoverageDataTrack)
 export(DetectedAIFromArray)
 export(GAnalysis)
 export(RBias)
@@ -49,16 +51,14 @@ export(impBcfGR)
 export(impBcfGRL)
 export(implodeList)
 export(legendBarplot)
+export(locationplot)
 export(makeMaskedFasta)
 export(mapBias)
 export(mapBiasRef)
 export(phase)
 export(phaseArray2Matrix)
 export(phaseMatrix2Array)
-export(plotTracks)
 export(randomRef)
-export(readGT)
-export(readVcf)
 export(realCigarPosition)
 export(realCigarPositions)
 export(realCigarPositionsList)
@@ -70,7 +70,6 @@ export(thresholdCountSample)
 export(thresholdDeltaFrequency)
 export(thresholdFrequency)
 export(thresholdPvalue)
-export(topalleleexample)
 exportClasses(ASEset)
 exportClasses(DetectedAI)
 exportClasses(GlobalAnalysis)
@@ -79,7 +78,6 @@ exportMethods("alleleCounts<-")
 exportMethods("genotype<-")
 exportMethods("phase<-")
 exportMethods(ASEDAnnotationTrack)
-exportMethods(CoverageDataTrack)
 exportMethods(alleleCounts)
 exportMethods(arank)
 exportMethods(barplot)
@@ -93,6 +91,7 @@ exportMethods(detectAI)
 exportMethods(fraction)
 exportMethods(fractionPlotDf)
 exportMethods(frequency)
+exportMethods(gbarplot)
 exportMethods(genotype)
 exportMethods(glocationplot)
 exportMethods(hetFilt)
@@ -101,7 +100,6 @@ exportMethods(hetPerSnp)
 exportMethods(inferAlleles)
 exportMethods(inferAltAllele)
 exportMethods(inferGenotypes)
-exportMethods(lbarplot)
 exportMethods(locationplot)
 exportMethods(mapBias)
 exportMethods(mapBiasRef)
@@ -136,11 +134,6 @@ importClassesFrom(GenomicAlignments,GAlignmentsList)
 importClassesFrom(GenomicFeatures,TxDb)
 importClassesFrom(GenomicRanges,GRanges)
 importClassesFrom(GenomicRanges,GRangesList)
-importClassesFrom(Gviz,AnnotationTrack)
-importClassesFrom(Gviz,DataTrack)
-importClassesFrom(Gviz,DetailsAnnotationTrack)
-importClassesFrom(Gviz,GeneRegionTrack)
-importClassesFrom(Gviz,GenomeAxisTrack)
 importFrom(AnnotationDbi,keys)
 importFrom(AnnotationDbi,select)
 importFrom(Biostrings,DNAStringSet)
@@ -174,11 +167,6 @@ importFrom(GenomicRanges,reduce)
 importFrom(GenomicRanges,rowData)
 importFrom(GenomicRanges,rowRanges)
 importFrom(GenomicRanges,unlist)
-importFrom(Gviz,AnnotationTrack)
-importFrom(Gviz,DataTrack)
-importFrom(Gviz,DetailsAnnotationTrack)
-importFrom(Gviz,GeneRegionTrack)
-importFrom(Gviz,plotTracks)
 importFrom(IRanges,IRanges)
 importFrom(IRanges,IntervalTree)
 importFrom(IRanges,coverage)
@@ -206,8 +194,6 @@ importFrom(Rsamtools,scanBamWhat)
 importFrom(Rsamtools,scanBcf)
 importFrom(Rsamtools,scanFa)
 importFrom(Rsamtools,scanFaIndex)
-importFrom(VariantAnnotation,readGT)
-importFrom(VariantAnnotation,readVcf)
 importFrom(graphics,barplot)
 importFrom(graphics,plot)
 importFrom(lattice,barchart)
