--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: AllelicImbalance
 Type: Package
 Title: Investigates allele specific expression
-Version: 1.5.9
-Date: 2015-03-16
+Version: 1.5.10
+Date: 2015-03-19
 Author: Jesper R Gadin, Lasse Folkersen
 Maintainer: Jesper R Gadin <j.r.gadin@gmail.com>
 Description: Provides a framework for allelic specific expression
-    investigation using RNA-seq data
+    investigation using RNA-seq data.
 License: GPL-3
 URL: https://github.com/pappewaio/AllelicImbalance
 Suggests: 
@@ -19,7 +19,9 @@ Depends:
     R (>= 3.1.0),
     grid,
     GenomicRanges,
-    GenomicAlignments
+    GenomicAlignments,
+	VariantAnnotation,
+	Gviz
 Imports:
     methods,
     BiocGenerics,
@@ -32,7 +34,8 @@ Imports:
     Gviz,
     lattice,
     seqinr,
-    GenomeInfoDb
+    GenomeInfoDb,
+	VariantAnnotation
 LazyData: TRUE
 biocViews: Genetics, Infrastructure, Sequencing
 VignetteBuilder: knitr
