Commit made by the Bioconductor Git-SVN bridge.
Commit id: d927e527a4870dfa5b112376b564794b491ef6f6

    version bump


Commit id: 1c54ac4d0f906dd83c04b59c233d592e869051fe

    small bugfixes


Commit id: ea3b7cbe0eab8e73cc27b63866567a83f7e9543b

    moved defaultMapbias to S4


Commit id: f1b3822954e64183fedc1e35849e2107a77f250c

    moved function getAlleleCount to S4


Commit id: f87ae06580c85a8f2e9eaed0c2cf2d4bc5628e55

    old functions deprecated


Commit id: 55bb75bd539af8acd0cddda044cbf14033493356

    moved impBamGAL to S4


Commit id: 317e527b0c4793b1ca226788d2d6866dad34e8d2

    separated docs for impBamX and deprecatin of impBamGRL


Commit id: 52443ba772b5136ff6decc09e2de4772487bfd4e

    removed the only half change from previous commit


Commit id: ec71ffab40099ac6fa39b3cfcfbdda0779862f4e

    1 and a half func conv



git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/AllelicImbalance@101143 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(getAreaFromGeneNames)
 export(getCDSFromAnnotation)
 export(getCDSVector)
 export(getDefaultMapBiasExpMean)
+export(getDefaultMapBiasExpMean3D)
 export(getExonsFromAnnotation)
 export(getExonsVector)
 export(getGenesFromAnnotation)
@@ -59,9 +60,9 @@ export(phase)
 export(phaseArray2Matrix)
 export(phaseMatrix2Array)
 export(randomRef)
-export(realCigarPosition)
-export(realCigarPositions)
-export(realCigarPositionsList)
+export(realCigarPosition.old)
+export(realCigarPositions.old)
+export(realCigarPositionsList.old)
 export(refbiasByAnnotation)
 export(referenceFrequency)
 export(regionSummary)
@@ -94,10 +95,16 @@ exportMethods(fractionPlotDf)
 exportMethods(frequency)
 exportMethods(gbarplot)
 exportMethods(genotype)
+exportMethods(getAlleleCounts)
+exportMethods(getDefaultMapBiasExpMean)
+exportMethods(getDefaultMapBiasExpMean3D)
 exportMethods(glocationplot)
 exportMethods(hetFilt)
 exportMethods(hetPerSample)
 exportMethods(hetPerSnp)
+exportMethods(impBamGAL)
+exportMethods(impBcfGR)
+exportMethods(impBcfGRL)
 exportMethods(inferAlleles)
 exportMethods(inferAltAllele)
 exportMethods(inferGenotypes)
@@ -113,6 +120,7 @@ exportMethods(refFraction)
 exportMethods(refbiasByAnnotation)
 exportMethods(referenceFrequency)
 exportMethods(regionSummary)
+exportMethods(scanForHeterozygotes)
 exportMethods(show)
 exportMethods(thresholdCountSample)
 exportMethods(thresholdDeltaFrequency)
