Commit made by the Bioconductor Git-SVN bridge.
Commit id: ad78a37c339cc32a970d3bde1e854c5c622d1c9d

    removed unused data object


Commit id: 166b0118a77ccf47d26c1f2470e4f35983b10724

    almost pass R check


Commit id: 23e099864303cc6b7cf41e2b0ea8fcccc6b4a45c

    Merge branch 'master' of https://github.com/pappewaio/AllelicImbalance


Commit id: c620e0b94998dab24aad9afa378727e05718754b

    survived run_examples


Commit id: d4354334d198567ceb9e42254d174899470019e9

    survived check_doc


Commit id: 31765a0a9d56da3ee0bf69924649d3a7e5aa8697

    optimize and text to regionsummary


Commit id: 48fea237d48a115ff2b87d8dad02709cb5f30a41

    finalized a working copy of the lva method


Commit id: 3af044579b02aebea2f241bb10ea9defa7ad83a2

    internal almlof regression done


Commit id: 41e88a633c090e64caf3336cfb6072a432c7826e

    deleteded line...


Commit id: eb411dafb5f405639bb143434334b337c39b4ef6

    fully upgraded regionSummary


Commit id: 78cb91d4f543e84c120bf69b6b2366f07128c445

    list can now be populated


Commit id: cf22e0d4b7eb7460d221194d76ca0f2fcda20d46

    index.list.names


Commit id: 61a9887fd72534bae363c641bc929a0ec8ceaa8f

    flattening and indexing of list of lists


Commit id: f5e54835447295d9d5f52fb3777a2a80a345edfa

    multiAlleleFilter method


Commit id: 9f2037cc5d68ed46e4fb2fa7c0ccabdc52cf81fa

    extended regionSummary


Commit id: ef100e3ffea0e59030c21146d2b33cbb971c2338

    Merge branch 'txToMatrix' into majorChanges


Commit id: b4888867a074d50ad9c7f39465b367bdb804cf3f

    remove docs for txToArray


Commit id: abf711f0cdd9476817bb746ac91cb4341142d487

    removed txFromArray prototype


Commit id: 171004afbaa321eed026b149e6013e54a410ca99

    new class and init method


Commit id: b300f32ebc59f47b0916bc28408a48a52c140a81

    re-split strands into two arrays


Commit id: cc20d81fbd3a566840eb5cd03893072d54375da7

    commit after solved conflicts


Commit id: 8abbfebf418f7cb0e5a19a088ef8e72828809c71

    merge after solving

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: AllelicImbalance
 Type: Package
 Title: Investigates allele specific expression
-Version: 1.7.0
-Date: 2015-04-03
+Version: 1.7.1
+Date: 2015-04-21
 Author: Jesper R Gadin, Lasse Folkersen
 Maintainer: Jesper R Gadin <j.r.gadin@gmail.com>
 Description: Provides a framework for allelic specific expression
@@ -31,11 +31,9 @@ Imports:
     IRanges,
     Rsamtools,
     GenomicFeatures,
-    Gviz,
     lattice,
     seqinr,
-    GenomeInfoDb,
-	VariantAnnotation
+    GenomeInfoDb
 LazyData: TRUE
 biocViews: Genetics, Infrastructure, Sequencing
 VignetteBuilder: knitr
