- Use RangedSummarizedExperiment from new SummarizedExperiment package instead   of old SummarizedExperiment from GenomicRanges. - Add "updateObject" methods for ASEset and ReferenceBias objects, and use them   to update serialized objects contained in the package.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/AllelicImbalance@103558 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: AllelicImbalance
 Type: Package
 Title: Investigates allele specific expression
-Version: 1.7.4
+Version: 1.7.5
 Date: 2015-05-05
 Author: Jesper R Gadin, Lasse Folkersen
 Maintainer: Jesper R Gadin <j.r.gadin@gmail.com>
@@ -19,9 +19,10 @@ Depends:
     R (>= 3.1.0),
     grid,
     GenomicRanges,
+    SummarizedExperiment (>= 0.1.0),
     GenomicAlignments,
-	VariantAnnotation,
-	Gviz
+    VariantAnnotation,
+    Gviz
 Imports:
     methods,
     BiocGenerics,
