--- a/NAMESPACE
+++ b/NAMESPACE
@@ -167,8 +167,11 @@ exportMethods(thresholdFrequency)
 exportMethods(thresholdPvalue)
 import(BiocGenerics)
 import(GenomeInfoDb)
+import(GenomicRanges)
 import(Gviz)
+import(IRanges)
 import(S4Vectors)
+import(SummarizedExperiment)
 import(grid)
 import(methods)
 importClassesFrom(AnnotationDbi,AnnotationDb)
@@ -181,8 +184,6 @@ importClassesFrom(GenomicAlignments,GAlignmentPairs)
 importClassesFrom(GenomicAlignments,GAlignments)
 importClassesFrom(GenomicAlignments,GAlignmentsList)
 importClassesFrom(GenomicFeatures,TxDb)
-importClassesFrom(GenomicRanges,GRanges)
-importClassesFrom(GenomicRanges,GRangesList)
 importFrom(AnnotationDbi,keys)
 importFrom(AnnotationDbi,select)
 importFrom(Biostrings,DNAStringSet)
@@ -202,26 +203,6 @@ importFrom(GenomicFeatures,cds)
 importFrom(GenomicFeatures,exons)
 importFrom(GenomicFeatures,isActiveSeq)
 importFrom(GenomicFeatures,transcripts)
-importFrom(GenomicRanges,"assays<-")
-importFrom(GenomicRanges,GRanges)
-importFrom(GenomicRanges,GRangesList)
-importFrom(GenomicRanges,SummarizedExperiment)
-importFrom(GenomicRanges,assays)
-importFrom(GenomicRanges,colData)
-importFrom(GenomicRanges,findOverlaps)
-importFrom(GenomicRanges,flank)
-importFrom(GenomicRanges,granges)
-importFrom(GenomicRanges,grglist)
-importFrom(GenomicRanges,reduce)
-importFrom(GenomicRanges,rowRanges)
-importFrom(GenomicRanges,unlist)
-importFrom(IRanges,IRanges)
-importFrom(IRanges,coverage)
-importFrom(IRanges,ranges)
-importFrom(IRanges,resize)
-importFrom(IRanges,subsetByOverlaps)
-importFrom(IRanges,unlist)
-importFrom(IRanges,which)
 importFrom(Rsamtools,ApplyPileupsParam)
 importFrom(Rsamtools,BamFileList)
 importFrom(Rsamtools,BcfFile)
