Commit made by the Bioconductor Git-SVN bridge.
Commit id: d4ddbb7ab263b70e1c722b6361da559987590299

    adapted to the new SummarizedExperiments package


Commit id: 66de94cc9129bf060b97b57e87e67341af9b6331

    passed rdev CMD check


Commit id: ef01188985c8abd8294851acdedaef6a35e4599c

    added whole genome parameter for locationplot


Commit id: 02582a74d3b2b7217b23b5527ab59910dc683853

    upgraded summary functionality for detectedAI


Commit id: fcf81da80a51ad6e78dd99d83ba102732022d161

    added summary and plot functions


Commit id: d487c567d34f21a76d4aac864c4eae9012c34962

    inferAltAllele parameter mod


Commit id: 98b9c8c4d0b443f592efba1366bc40da7cd0ce8e

    Merge branch 'master' into summary-detectedAI-class


Commit id: 6fe3a9571e35892206b727ffe089e270044e5a77

    added genotype source option to inferAltAllele


Commit id: 06ced2318cd0975af4bc625b7a82197dea97f684

    Merge branch 'master' into summary-detectedAI-class


Commit id: 6eb82227931d5d74ad7e544e08deaebcd273536d

    bug fixed


Commit id: 720baaca3478c8ba2233723cf130867cd6a740c4

    just started



git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/AllelicImbalance@104598 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,9 +31,15 @@ export(decorateWithGenes)
 export(defaultMapBias)
 export(defaultPhase)
 export(detectAI)
+export(detectedAI_vs_threshold_variable_multigraph_plot)
+export(detectedAI_vs_threshold_variable_plot)
+export(detectedAI_vs_threshold_variable_summary)
 export(fraction)
 export(fractionPlotDf)
 export(frequency)
+export(frequency_vs_threshold_variable_multigraph_plot)
+export(frequency_vs_threshold_variable_plot)
+export(frequency_vs_threshold_variable_summary)
 export(gba)
 export(genotype)
 export(getAlleleCounts)
@@ -81,6 +87,8 @@ export(realCigarPositionsList.old)
 export(ref)
 export(refbiasByAnnotation)
 export(referenceFrequency)
+export(reference_frequency_density_vs_threshold_variable_multigraph_plot)
+export(reference_frequency_density_vs_threshold_variable_plot)
 export(region.list.populate)
 export(regionSummary)
 export(riskVariantFromGRanges)
@@ -90,6 +98,7 @@ export(thresholdCountSample)
 export(thresholdDeltaFrequency)
 export(thresholdFrequency)
 export(thresholdPvalue)
+export(usedSNPs_vs_threshold_variable_summary)
 exportClasses(ASEset)
 exportClasses(DetectedAI)
 exportClasses(GlobalAnalysis)
@@ -118,9 +127,15 @@ exportMethods(coverageMatrixListFromGAL)
 exportMethods(defaultMapBias)
 exportMethods(defaultPhase)
 exportMethods(detectAI)
+exportMethods(detectedAI_vs_threshold_variable_multigraph_plot)
+exportMethods(detectedAI_vs_threshold_variable_plot)
+exportMethods(detectedAI_vs_threshold_variable_summary)
 exportMethods(fraction)
 exportMethods(fractionPlotDf)
 exportMethods(frequency)
+exportMethods(frequency_vs_threshold_variable_multigraph_plot)
+exportMethods(frequency_vs_threshold_variable_plot)
+exportMethods(frequency_vs_threshold_variable_summary)
 exportMethods(gba)
 exportMethods(gbarplot)
 exportMethods(genotype)
@@ -158,6 +173,8 @@ exportMethods(refAllele)
 exportMethods(refFraction)
 exportMethods(refbiasByAnnotation)
 exportMethods(referenceFrequency)
+exportMethods(reference_frequency_density_vs_threshold_variable_multigraph_plot)
+exportMethods(reference_frequency_density_vs_threshold_variable_plot)
 exportMethods(regionSummary)
 exportMethods(scanForHeterozygotes)
 exportMethods(show)
@@ -165,6 +182,7 @@ exportMethods(thresholdCountSample)
 exportMethods(thresholdDeltaFrequency)
 exportMethods(thresholdFrequency)
 exportMethods(thresholdPvalue)
+exportMethods(usedSNPs_vs_threshold_variable_summary)
 import(BiocGenerics)
 import(GenomeInfoDb)
 import(GenomicRanges)
