Commit made by the Bioconductor Git-SVN bridge.
Commit id: fc0adcb5288fdd435d5b2ef45222cc25e1527ec9

    removed the last note in R CMD check


Commit id: fdb192a05192143f6990ac71ff3f2176c5063569

    one less NOTE


Commit id: aa05b8529ea06d985248a2ad4326898ac0a32600

    one less package in depends


Commit id: 96c4e4539f09d2e50caf69eb5c42204a879f7780

    one NOTE gone and one less package in the depends field



git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/AllelicImbalance@104631 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: AllelicImbalance
 Type: Package
 Title: Investigates allele specific expression
-Version: 1.7.8
-Date: 2015-06-05
+Version: 1.7.9
+Date: 2015-06-06
 Author: Jesper R Gadin, Lasse Folkersen
 Maintainer: Jesper R Gadin <j.r.gadin@gmail.com>
 Description: Provides a framework for allelic specific expression
@@ -14,24 +14,25 @@ Suggests:
     org.Hs.eg.db,
     TxDb.Hsapiens.UCSC.hg19.knownGene,
     SNPlocs.Hsapiens.dbSNP.20120608,
+    BiocStyle,
     knitr
 Depends: 
-    R (>= 3.1.0),
+    R (>= 3.3.0),
     grid,
     GenomicRanges,
     SummarizedExperiment (>= 0.1.1),
-    GenomicAlignments,
-    VariantAnnotation,
-    Gviz
+    GenomicAlignments
 Imports:
     methods,
     BiocGenerics,
     AnnotationDbi,
+    VariantAnnotation,
     Biostrings,
     S4Vectors,
     IRanges,
     Rsamtools,
     GenomicFeatures,
+    Gviz,
     lattice,
     seqinr,
     GenomeInfoDb
