live test and correction for riskVariant and phase addition
From: Jesper R. Gådin <j.r.gadin@gmail.com>

git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/AllelicImbalance@108521 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -84,7 +84,7 @@ export(referenceFrequency)
 export(reference_frequency_density_vs_threshold_variable_multigraph_plot)
 export(reference_frequency_density_vs_threshold_variable_plot)
 export(regionSummary)
-export(riskVariantFromGRanges)
+export(riskVariantFromGRangesAndPhaseArray)
 export(scanForHeterozygotes)
 export(scanForHeterozygotes.old)
 export(thresholdCountSample)
