some doc updates
From: Jesper R. Gådin <j.r.gadin@gmail.com>

git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/AllelicImbalance@108939 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(ASEsetFromCountList)
 export(CoverageDataTrack)
 export(DetectedAIFromArray)
 export(GAnalysis)
+export(RiskVariantFromGRangesAndPhaseArray)
 export(alleleCounts)
 export(alt)
 export(annotationBarplot)
@@ -83,9 +84,9 @@ export(referenceFrequency)
 export(reference_frequency_density_vs_threshold_variable_multigraph_plot)
 export(reference_frequency_density_vs_threshold_variable_plot)
 export(regionSummary)
-export(riskVariantFromGRangesAndPhaseArray)
 export(scanForHeterozygotes)
 export(scanForHeterozygotes.old)
+export(sumnames)
 export(thresholdCountSample)
 export(thresholdDeltaFrequency)
 export(thresholdFrequency)
@@ -94,7 +95,9 @@ export(usedSNPs_vs_threshold_variable_summary)
 exportClasses(ASEset)
 exportClasses(DetectedAI)
 exportClasses(GlobalAnalysis)
-exportClasses(riskVariant)
+exportClasses(LinkVariantAlmlof)
+exportClasses(RegionSummary)
+exportClasses(RiskVariant)
 exportMethods("alleleCounts<-")
 exportMethods("alt<-")
 exportMethods("aquals<-")
@@ -166,6 +169,7 @@ exportMethods(reference_frequency_density_vs_threshold_variable_multigraph_plot)
 exportMethods(reference_frequency_density_vs_threshold_variable_plot)
 exportMethods(regionSummary)
 exportMethods(scanForHeterozygotes)
+exportMethods(sumnames)
 exportMethods(thresholdCountSample)
 exportMethods(thresholdDeltaFrequency)
 exportMethods(thresholdFrequency)
