bug fix for phase group unit, and added one new test for this bug
From: Jesper R. Gådin <j.r.gadin@gmail.com>

git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/AllelicImbalance@108946 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -75,6 +75,7 @@ export(phase)
 export(phase2genotype)
 export(phaseArray2phaseMatrix)
 export(phaseMatrix2Array)
+export(pvalue)
 export(randomRef)
 export(realCigarPosition.old)
 export(realCigarPositions.old)
@@ -161,6 +162,8 @@ exportMethods(phase)
 exportMethods(phase2genotype)
 exportMethods(phaseArray2phaseMatrix)
 exportMethods(phaseMatrix2Array)
+exportMethods(plot)
+exportMethods(pvalue)
 exportMethods(randomRef)
 exportMethods(ref)
 exportMethods(refAllele)
