passed R CMD check
From: Jesper R. Gådin <j.r.gadin@gmail.com>

git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/AllelicImbalance@108950 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,15 +10,15 @@ Description: Provides a framework for allelic specific expression
     investigation using RNA-seq data.
 License: GPL-3
 URL: https://github.com/pappewaio/AllelicImbalance
-BugReports: https://github.com/pappewaio/AllelicImbalance/issues 
-Suggests: 
+BugReports: https://github.com/pappewaio/AllelicImbalance/issues
+Suggests:
     testthat,
     org.Hs.eg.db,
     TxDb.Hsapiens.UCSC.hg19.knownGene,
     SNPlocs.Hsapiens.dbSNP.20120608,
     BiocStyle,
     knitr
-Depends: 
+Depends:
     R (>= 3.2.0),
     grid,
     GenomicRanges,
@@ -41,3 +41,36 @@ Imports:
 LazyData: TRUE
 biocViews: Genetics, Infrastructure, Sequencing
 VignetteBuilder: knitr
+Collate:
+    'ASEset-class.R'
+    'AllelicImbalance-package.R'
+    'DetectedAI-class.R'
+    'GlobalAnalysis-class.R'
+    'GvizTrack-methods.R'
+    'LinkVariantAlmlof-class.R'
+    'initialize-methods.R'
+    'RegionSummary-class.R'
+    'RiskVariant-class.R'
+    'auxillary-functions-annotation.R'
+    'auxillary-functions-visuals.R'
+    'auxillary-methods-annotation.R'
+    'auxillary-methods-summaries.R'
+    'auxillary-methods.R'
+    'barplot-methods.R'
+    'binom.test-methods.R'
+    'boxplot-methods.R'
+    'chisq.test-methods.R'
+    'deprecations.R'
+    'detect-methods.R'
+    'filter-methods.R'
+    'histplot-methods.R'
+    'inference-methods.R'
+    'linkage-methods.R'
+    'list-methods.R'
+    'locationplot-methods.R'
+    'mapbias-methods.R'
+    'plot-methods.R'
+    'show-methods.R'
+    'simulation-methods.R'
+    'summary-methods.R'
+    'utils.R'
