updates to vignette and NEWS file
From: Jesper R. Gådin <j.r.gadin@gmail.com>

git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/AllelicImbalance@109113 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(aquals)
 export(arank)
 export(barplotLatticeCounts)
 export(barplotLatticeFraction)
+export(basic)
 export(countAllelesFromBam)
 export(countsPerSample)
 export(countsPerSnp)
@@ -114,6 +115,7 @@ exportMethods(alt)
 exportMethods(aquals)
 exportMethods(arank)
 exportMethods(barplot)
+exportMethods(basic)
 exportMethods(binom.test)
 exportMethods(chisq.test)
 exportMethods(countAllelesFromBam)
