--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: AllelicImbalance
 Type: Package
 Title: Investigates allele specific expression
-Version: 1.9.2
+Version: 1.9.3
 Date: 2016-01-10
 Encoding: UTF-8
 Author: Jesper R Gadin, Lasse Folkersen
@@ -30,7 +30,7 @@ Imports:
     AnnotationDbi,
     VariantAnnotation,
     Biostrings,
-    S4Vectors,
+    S4Vectors (>= 0.9.25),
     IRanges,
     Rsamtools,
     GenomicFeatures,
