minCountFilter, and substantial update of its units
Conflicts:
	tests/testthat/test_utils.R

From: Jesper R. Gådin <j.r.gadin@gmail.com>

git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/AllelicImbalance@113845 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(DetectedAIFromArray)
 export(GAnalysis)
 export(alleleCounts)
 export(alt)
+export(altExist)
 export(annotationBarplot)
 export(aquals)
 export(arank)
@@ -58,6 +59,7 @@ export(getGenesVector)
 export(getSnpIdFromLocation)
 export(getTranscriptsFromAnnotation)
 export(getTranscriptsVector)
+export(hetFilt)
 export(impBamGAL)
 export(impBamGRL)
 export(impBcfGR)
@@ -71,6 +73,9 @@ export(makeMaskedFasta)
 export(mapBias)
 export(mapBiasRef)
 export(maternalAllele)
+export(minCountFilt)
+export(minFreqFilt)
+export(multiAllelicFilt)
 export(paternalAllele)
 export(phase)
 export(phase2genotype)
@@ -82,6 +87,7 @@ export(realCigarPosition.old)
 export(realCigarPositions.old)
 export(realCigarPositionsList.old)
 export(ref)
+export(refExist)
 export(referenceFrequency)
 export(reference_frequency_density_vs_threshold_variable_multigraph_plot)
 export(reference_frequency_density_vs_threshold_variable_plot)
@@ -112,6 +118,7 @@ exportMethods(ASEDAnnotationTrack)
 exportMethods(ASEsetFromBam)
 exportMethods(alleleCounts)
 exportMethods(alt)
+exportMethods(altExist)
 exportMethods(aquals)
 exportMethods(arank)
 exportMethods(barplot)
@@ -159,6 +166,8 @@ exportMethods(makeMaskedFasta)
 exportMethods(mapBias)
 exportMethods(mapBiasRef)
 exportMethods(maternalAllele)
+exportMethods(minCountFilt)
+exportMethods(minFreqFilt)
 exportMethods(multiAllelicFilt)
 exportMethods(paternalAllele)
 exportMethods(phase)
@@ -170,6 +179,7 @@ exportMethods(pvalue)
 exportMethods(randomRef)
 exportMethods(ref)
 exportMethods(refAllele)
+exportMethods(refExist)
 exportMethods(referenceFrequency)
 exportMethods(reference_frequency_density_vs_threshold_variable_multigraph_plot)
 exportMethods(reference_frequency_density_vs_threshold_variable_plot)
