removed notes from cmd check
From: Jesper R. Gådin <j.r.gadin@gmail.com>

git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/AllelicImbalance@114105 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -264,11 +264,17 @@ importFrom(VariantAnnotation,alt)
 importFrom(VariantAnnotation,ref)
 importFrom(graphics,barplot)
 importFrom(graphics,plot)
+importFrom(gridExtra,grid.arrange)
 importFrom(lattice,barchart)
+importFrom(lattice,levelplot)
 importFrom(lattice,panel.abline)
 importFrom(lattice,panel.barchart)
+importFrom(lattice,panel.linejoin)
+importFrom(lattice,panel.smoothScatter)
 importFrom(lattice,panel.text)
 importFrom(lattice,trellis.par.set)
 importFrom(lattice,xyplot)
+importFrom(latticeExtra,doubleYScale)
 importFrom(seqinr,write.fasta)
 importMethodsFrom(AnnotationDbi,columns)
+importMethodsFrom(BSgenome,snpsByOverlaps)
