--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: AllelicImbalance
 Type: Package
 Title: Investigates allele specific expression
-Version: 1.9.6
+Version: 1.9.7
 Date: 2016-01-10
 Encoding: UTF-8
 Author: Jesper R Gadin, Lasse Folkersen
@@ -28,6 +28,7 @@ Imports:
     methods,
     BiocGenerics,
     AnnotationDbi,
+    BSgenome,
     VariantAnnotation,
     Biostrings,
     S4Vectors (>= 0.9.25),
@@ -36,6 +37,8 @@ Imports:
     GenomicFeatures,
     Gviz,
     lattice,
+	latticeExtra,
+	gridExtra,
     seqinr,
     GenomeInfoDb
 LazyData: TRUE
