added rmarkdown to suggests
From: Jesper R. Gådin <j.r.gadin@gmail.com>

git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/AllelicImbalance@114293 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,9 +15,10 @@ Suggests:
     testthat,
     org.Hs.eg.db,
     TxDb.Hsapiens.UCSC.hg19.knownGene,
-	SNPlocs.Hsapiens.dbSNP144.GRCh37,
+    SNPlocs.Hsapiens.dbSNP144.GRCh37,
     BiocStyle,
-    knitr
+    knitr,
+    rmarkdown
 Depends:
     R (>= 3.2.0),
     grid,
@@ -37,8 +38,8 @@ Imports:
     GenomicFeatures,
     Gviz,
     lattice,
-	latticeExtra,
-	gridExtra,
+    latticeExtra,
+    gridExtra,
     seqinr,
     GenomeInfoDb
 LazyData: TRUE
