--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: AllelicImbalance
 Type: Package
-Title: Investigates allele specific expression
-Version: 1.11.1
-Date: 2016-04-02
+Title: Investigates Allele Specific Expression
+Version: 1.11.2
+Date: 2016-05-12
 Encoding: UTF-8
 Author: Jesper R Gadin, Lasse Folkersen
 Maintainer: Jesper R Gadin <j.r.gadin@gmail.com>
