added an extra nlme version of lva
From: Jesper R. Gådin <j.r.gadin@gmail.com>

git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/AllelicImbalance@126945 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -262,8 +262,17 @@ importFrom(VariantAnnotation,'alt<-')
 importFrom(VariantAnnotation,'ref<-')
 importFrom(VariantAnnotation,alt)
 importFrom(VariantAnnotation,ref)
+importFrom(grDevices,heat.colors)
+importFrom(graphics,abline)
 importFrom(graphics,barplot)
+importFrom(graphics,lines)
+importFrom(graphics,mtext)
 importFrom(graphics,plot)
+importFrom(graphics,plot.default)
+importFrom(graphics,points)
+importFrom(graphics,symbols)
+importFrom(graphics,text)
+importFrom(graphics,title)
 importFrom(gridExtra,grid.arrange)
 importFrom(lattice,barchart)
 importFrom(lattice,levelplot)
@@ -275,6 +284,11 @@ importFrom(lattice,panel.text)
 importFrom(lattice,trellis.par.set)
 importFrom(lattice,xyplot)
 importFrom(latticeExtra,doubleYScale)
+importFrom(nlme,lme)
 importFrom(seqinr,write.fasta)
+importFrom(stats,anova)
+importFrom(stats,dist)
+importFrom(stats,lm)
+importFrom(stats,setNames)
 importMethodsFrom(AnnotationDbi,columns)
 importMethodsFrom(BSgenome,snpsByOverlaps)
