--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: AllelicImbalance
 Type: Package
 Title: Investigates Allele Specific Expression
-Version: 1.13.1
+Version: 1.13.2
 Date: 2016-05-12
 Encoding: UTF-8
 Author: Jesper R Gadin, Lasse Folkersen
@@ -41,7 +41,8 @@ Imports:
     latticeExtra,
     gridExtra,
     seqinr,
-    GenomeInfoDb
+    GenomeInfoDb,
+    nlme
 LazyData: TRUE
 biocViews: Genetics, Infrastructure, Sequencing
 VignetteBuilder: knitr
@@ -78,4 +79,4 @@ Collate:
     'simulation-methods.R'
     'summary-methods.R'
     'utils.R'
-RoxygenNote: 5.0.1
+RoxygenNote: 6.0.1
