bugfix from addition of covariates to lva
From: Jesper R. Gådin <j.r.gadin@gmail.com>

git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/AllelicImbalance@130463 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -288,6 +288,7 @@ importFrom(nlme,lme)
 importFrom(seqinr,write.fasta)
 importFrom(stats,anova)
 importFrom(stats,dist)
+importFrom(stats,formula)
 importFrom(stats,lm)
 importFrom(stats,setNames)
 importMethodsFrom(AnnotationDbi,columns)
